@@ -1,4 +1,9 @@
 ----- cvs ci ------
+Mon Dec 25 19:15:50 EET 2000 
+dmitry:
++ added processing of tokens packNetmail & maxUnpackedNetmail in tparser
+
+----- cvs ci ------
 Mon Dec 18 23:54:19 NOVT 2000
 max (patch from Serguei Revtov):
 * compilation fidoconf.c with Watcom/W32
